--- a/public/lib/bekk.less
+++ b/public/lib/bekk.less
@@ -56,6 +56,7 @@
   -khtml-border-radius: @size;
   border-radius: @size;
 }
+.lightbrown { color: @lightbrown; }
 
 /* ---------------------------------- */
 /* --- Slideshow styles ------------- */
@@ -402,7 +403,7 @@ div.remark-slides-area {
     }
 
     &.pushed {
-      h1 { margin-top: 17em; }
+      h1 { margin-top: 21em; }
 
       .img {
         position: absolute;
