neo, styles, presentation, offline

--- a/public/lib/bekk.less
+++ b/public/lib/bekk.less
@@ -34,7 +34,7 @@
 /* ---------------------------------- */
 
 .bekk-logo(@factor, @position: center, @type: "") {
-  background-image: url("https://github.com/kjbekkelund/remark-bekk/raw/master/lib/images/bekk@{type}.png");
+  background-image: url("/img/bekk@{type}.png");
   background-repeat: no-repeat;
   background-position: @position;
   background-size: @logo-width*@factor @logo-height*@factor;
